Added proto of real time stats (with a cool graph that took me way too much time)